--- a/project.yml
+++ b/project.yml
@@ -1,12 +1,23 @@
 settings:
-  name: "Product Name"
+  name: "BlueXP reports"
   internal:
     pdf_enabled: true
   prod:
     pdf_enabled: true
     harmony_enabled: true
 
-sidebar: 
+sidebar:
   entries:
-  - title: Legal notices
-    url: /legal-notices.html
+    - title: BlueXP reports docs
+      url: /index.html
+    - section: release-notes
+    - section: get-started
+    - section: use
+#    - section: concepts
+    - section: support
+    - title: Legal notices
+      url: /legal-notices.html
+product-family:
+  name: BlueXP
+  repo: cloud-manager-family
+  sidebar_label: All BlueXP documentation
