inv report sample, delete

--- a/use/sidebar.yml
+++ b/use/sidebar.yml
@@ -5,7 +5,7 @@ entries:
     url: /use/report-overview.html
   - title: Create a report
     url: /use/report-create.html
-  - title: View a sample report
+  - title: View a sample Backup Inventory report
     url: /use/report-sample.html
   - title: Delete a report
     url: /use/report-delete.html
