--- a/get-started/sidebar.yml
+++ b/get-started/sidebar.yml
@@ -1,15 +1,15 @@
 section: get-started
 title: Get started
 entries:
-  - title: Learn about BlueXP reports
+  - title: Learn about BlueXP estate reports
     url: /get-started/intro.html
   - title: Prerequisites
     url: /get-started/prerequisites.html
   - title: Quick start
     url: /get-started/quick-start.html
-  - title: Set up BlueXP reports 
+  - title: Set up BlueXP estate reports 
     url: /get-started/setup.html 
-  - title: Access BlueXP reports
+  - title: Access BlueXP estate reports
     url: /get-started/login.html
   - title: FAQ
     url: /get-started/faq.html 
