--- a/use/sidebar.yml
+++ b/use/sidebar.yml
@@ -1,11 +1,12 @@
 section: use
-title: Use BlueXP reports
+title: Use BlueXP estate reports
 entries:
-  - title: What you can do with BlueXP reports
+  - title: What you can do with BlueXP estate reports
     url: /use/report-overview.html
   - title: Create a report
     url: /use/report-create.html
-  - title: View a sample Backup Inventory report
+  - title: View a sample Volumes report
     url: /use/report-sample.html
+  - title: Enable report notifications
   - title: Delete a report
     url: /use/report-delete.html
