--- a/use/sidebar.yml
+++ b/use/sidebar.yml
@@ -1,7 +1,7 @@
 section: use
-title: Use BlueXP estate reports
+title: Use BlueXP migration reports
 entries:
-  - title: What you can do with BlueXP estate reports
+  - title: What you can do with BlueXP migration reports
     url: /use/report-overview.html
   - title: Create a report
     url: /use/report-create.html
